<resources>
    <string name="app_name">Sezin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="how_are_you_feeling_today_record_your_progress">How are you feeling today? Record your progress!</string>
    <string name="good_morning">Good morning, May!</string>
    <string name="online_sessions">Online Sessions</string>
    <string name="let_s_open_up_to_the_things_that_matter_the_most">Let’s open up to the things that matter the most</string>
    <string name="journal">Journal</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="don_t_go_through_life_grow_through_life">“Don’t go through life, grow through life.“</string>
    <string name="eric_butterworth">Eric Butterworth</string>
    <string name="plan_expired">Plan Expired</string>
    <string name="get_back_chat_access_and_session_credits">Get back chat access and session credits</string>
    <string name="buy_more">Buy More</string>
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="music">Music</string>
    <string name="profile">Profile</string>
    <string name="relaxing_music">Relaxing Music</string>
    <string name="music_has_the_power_to_calm_our_senses_and_relax_our_mind_it_also_helps_to_feel_nearly_all_emotions_that_we_experience_in_our_lives_this_music_will_be_ideal_for_sleep_and_evening_relaxation">Music has the power to calm our senses and relax our mind. It also helps to feel nearly all emotions that we experience in our lives. This music will be ideal for sleep and evening relaxation.</string>
    <string name="priority_task_progress">Priority Task Progress</string>
    <string name="_3_5_completed">3/5 completed</string>
    <string name="_68_8">68.8%</string>
    <string name="overview">Overview</string>
    <string name="productivity">Productivity</string>
    <string name="therapist_details">Therapist Details</string>
    <string name="reviews">Reviews</string>
    <string name="see_all">See all</string>
    <string name="choose_plan">Choose Plan</string>
    <string name="unlock_all_features_with_premium_plan">Unlock all features with Premium Plan</string>
    <string name="enable_features">Enable Features</string>
    <string name="you_can_customize_the_features_in_your_workspace_now_or_you_can_do_it_later_in_menu_account_settings">You can customize the features in your workspace now. Or you can do it later in Menu – Account Settings.</string>
    <string name="custom_labels">Custom Labels</string>
    <string name="continue_text">Continue</string>
    <string name="take_a_survey_before_starting">Take a survey before starting!</string>
    <string name="account_settings">Account Settings</string>
    <string name="support">Support</string>
    <string name="change_information_account">Change information account</string>
    <string name="request_account_info">Request account info</string>
    <string name="notification_settings">Notification settings</string>
    <string name="about_sezin">About Sezin</string>
    <string name="change_language">Change language</string>
    <string name="write_us">Write Us</string>
</resources>