<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_profile"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.screens.settings.SettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/btn_settings"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:padding="6dp"
            android:src="@drawable/ic_back"
            android:layout_marginTop="16dp"
            android:layout_gravity="start"
            app:tint="@color/white" />


        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:src="@drawable/logo"/>

        <TextView
            style="@style/MainTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Ken May"
            android:textColor="@color/white"
            android:layout_marginTop="12dp"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            style="@style/MainTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="ken.may@gmail.com"
            android:textColor="@color/white"
            android:layout_marginTop="12dp"
            android:textSize="12sp" />


        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:orientation="vertical"
            android:backgroundTint="@color/white">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:textSize="12sp"
                android:text="@string/account_settings"
                android:layout_marginTop="24dp"/>

            <LinearLayout
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="36dp"
                android:paddingEnd="36dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">
                <TextView
                    android:layout_gravity="center"
                    style="@style/MainTextViewStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/change_information_account"/>
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_next"
                    app:tint="#91919F" />
            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="36dp"
                android:paddingEnd="36dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">
                <TextView
                    android:layout_gravity="center"
                    style="@style/MainTextViewStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/notification_settings"/>
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_next"
                    app:tint="#91919F" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="36dp"
                android:paddingEnd="36dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">
                <TextView
                    android:layout_gravity="center"
                    style="@style/MainTextViewStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/request_account_info"/>
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_next"
                    app:tint="#91919F" />
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:textSize="12sp"
                android:text="@string/support"
                android:layout_marginTop="24dp"/>

            <LinearLayout
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="36dp"
                android:paddingEnd="36dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">
                <TextView
                    android:layout_gravity="center"
                    style="@style/MainTextViewStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/about_sezin"/>
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_next"
                    app:tint="#91919F" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="36dp"
                android:paddingEnd="36dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">
                <TextView
                    android:layout_gravity="center"
                    style="@style/MainTextViewStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/change_language"/>
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_next"
                    app:tint="#91919F" />
            </LinearLayout>


            <LinearLayout
                android:layout_marginBottom="24dp"
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="36dp"
                android:paddingEnd="36dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp">
                <TextView
                    android:layout_gravity="center"
                    style="@style/MainTextViewStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/write_us"/>
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_next"
                    app:tint="#91919F" />
            </LinearLayout>




        </LinearLayout>



    </LinearLayout>


</ScrollView>